--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,8 +12,34 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+          <% if logged_in? %>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                アイテムを追加
+                </a>
+            </li>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="gravatar">
+                  <img src="<%= gravatar_url(current_user, size: 20) %>" alt="" class="img-circle">
+                </span>
+                <%= current_user.name %>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to 'マイページ', user_path(current_user) %>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
+                  <a href="#">ログアウト</a>
+                </li>
+              </ul>
+            </li>
         <li><%= link_to '新規登録', signup_path %></li>
-        <li><a href="#">ログイン</a></li>
+        <li><%= link_to 'ログイン', login_path %></li>
       </ul>
       </div>
     </div>
