--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,22 +2,22 @@
   <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-left" href="/"><img src="/images/logo.png" alt="Monolist"></a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-left" href="/"><img src="/images/logo.png" alt="Monolist"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
             <li>
-              <a href="#">
+              <%= link_to new_item_path do %>
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 アイテムを追加
-                </a>
+              <% end %>
             </li>
 
             <li class="dropdown">
@@ -38,9 +38,12 @@
                 </li>
               </ul>
             </li>
-        <li><%= link_to '新規登録', signup_path %></li>
-        <li><%= link_to 'ログイン', login_path %></li>
-      </ul>
+          <% else %>
+            <li><%= link_to '新規登録', signup_path %></li>
+            <li><%= link_to 'ログイン', login_path %></li>
+            <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+          <% end %>
+        </ul>
       </div>
     </div>
   </nav>
