--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -35,6 +35,11 @@
         <div class="panel-heading text-center">
           Haveしたユーザ
         </div>
+          <div class="panel-body">
+          <% @have_users.each do |user| %>
+            <%= link_to user.name, user_path(user) %>
+          <% end %>
+        </div>
         <div class="panel-body">
         </div>
       </div>
